k8s/applications/ai/executor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executor
  namespace: executor
  labels:
    app.kubernetes.io/name: executor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: executor
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 4400
      targetPort: http
      protocol: TCP
