k8s/applications/ai/executor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: executor
  namespace: executor
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-subdomains
  hostnames:
    - executor.smadja.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: executor
          port: 4400
